--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -27,6 +27,8 @@ html {
 body {
   font-size: 1.6rem;
   font-family: Gordita, sans-serif;
+  color: var(--text-color);
+    background: var(--body-bg);
 }
 
 a {
