--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -9,7 +9,7 @@
   --icon-color: brightness(0) saturate(100%) invert(11%) sepia(39%)
     saturate(698%) hue-rotate(210deg) brightness(91%) contrast(102%);
 }
-
+a,
 input,
 textarea,
 button,
@@ -18,6 +18,7 @@ select {
   outline: none;
   background: transparent;
   font-family: inherit;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html {
