--- a/scss/components/_drop-down.scss
+++ b/scss/components/_drop-down.scss
@@ -9,7 +9,9 @@
     padding-top: 5rem;
 
     @include abstracts.breakpoint(lg) {
-        display: none;
+        position: static;
+        padding-top: 0;
+        // overflow-y: auto;
     }
 
     &__inner {
@@ -20,6 +22,12 @@
         border-radius: 2rem;
         padding: var(--inner-padding-width);
         background: var(--drop-down-bg-color);
+        @include abstracts.breakpoint(lg) {
+                background: transparent;
+                box-shadow: none;
+                padding: 0;
+                max-height: none;
+            }
         box-shadow: 0px 40px 90px 20px var(--drop-down-shadow);
 
         &::before {
@@ -30,6 +38,9 @@
             filter: var(--drop-down-arrow-color);
             left: var(--arrow-left-pos);
             transform: translate(-50%);
+            @include abstracts.breakpoint(lg) {
+                    display: none;
+                }
         }
 
     }
@@ -40,23 +51,38 @@
     height: calc(var(--inner-height) - var(--inner-padding-width) * 2);
     display: flex;
     position: relative;
-
+    @include abstracts.breakpoint(lg){
+        height: auto;
+    }
     &__main {
         height: inherit;
         width: var(--top-menu-main-width);
         border-right: 1px solid var(--menu-column-border);
         overflow-y: auto;
+        @include abstracts.breakpoint(lg) {
+                border-right-color: transparent;
+                width: 100%;
+                overflow-y: visible;
+
+            }
     }
 
     &__subs-wrapper {
         display: none;
         position: absolute;
         inset: 0 0 0 var(--top-menu-main-width);
-        overflow: auto;
-
+        overflow-y: auto;
+            @include abstracts.breakpoint(lg) {
+                    position: static;
+                    overflow-y: visible;
+                }
         &--not-main {
             display: block;
             inset: 0;
+            
+        }
+        @include abstracts.breakpoint(lg){
+            width: 100%;
         }
     }
 
@@ -66,10 +92,14 @@
         grid-template-columns: repeat(3, calc(100% / 3 - var(--col-gap-width)));
         width: 100%;
         column-gap: var(--col-gap-width);
-
+        @include abstracts.breakpoint(lg) {
+                grid-template-columns: 1fr;
+            }
         &--not-main {
             grid-template-columns: repeat(4, calc(100% / 4 - var(--col-gap-width)));
-
+            @include abstracts.breakpoint(lg){
+                grid-template-columns: 1fr;
+            }
         }
     }
 
@@ -78,10 +108,11 @@
         display: flex;
         flex-direction: column;
         row-gap: 20px;
-    }
-
-    &__sub {
         padding-left: 30px;
+        @include abstracts.breakpoint(lg) {
+                padding-left: 0;
+                row-gap: 0;
+            }
     }
 }
 
@@ -90,16 +121,24 @@
     display: flex;
     column-gap: 14px;
 
+    @include abstracts.breakpoint(lg){
+        padding: 7px 0;
+    }
+
     &__icon {
         flex-shrink: 0;
         width: 36px;
         height: 36px;
         position: relative;
-
-        @include abstracts.breakpoint(xl) {
-            display: none;
+        @include abstracts.breakpoint(lg) {
+            &--hidden{
+                display: none;
+            }
         }
+
     }
+
+
 
     &__icon-1 {
         position: absolute;
@@ -124,22 +163,37 @@
 
     &__content {
         flex: 1;
+        
     }
 
     &__heading {
-        margin-top: 5px;
+        margin-top: 6px;
         font-size: 16px;
         font-weight: 500;
         line-height: 1.5;
         color: var(--menu-column-heading);
+        @include abstracts.breakpoint(lg) {
+            display: block;
+            margin-bottom: 14px;
+            &--hidden {
+                display: none;
+            }
+
+        }
     }
 
     &__list {
         margin-top: 19px;
-    }
-
+        @include abstracts.breakpoint(lg) {
+            margin-top: 0;
+        }
+    }   
     &__item-wrapper {
 
+        @include abstracts.breakpoint(lg) {
+                display: flex;
+                flex-direction: column;
+            }
         &:hover .top-menu__subs-wrapper {
             display: block;
         }
@@ -162,6 +216,7 @@
             color: #0071DC;
         }
 
-
+        
     }
+
 }
