--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -27,6 +27,7 @@
   padding: 3rem 0;
   position: relative;
   &__more {
+    cursor: pointer;
     display: none;
     @include abstracts.breakpoint(lg) {
       display: block;
@@ -46,19 +47,64 @@
   line-height: 1.46; /* 146.667% */
 }
 
+.navbar {
+
+  &__overlay {
+    position: fixed;
+    inset: 0;
+    z-index: 8;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity, visibility;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    background: rgba($color: #000000, $alpha: 0.2);
+
+  }
+
+  @include abstracts.breakpoint(lg) {
+    position: fixed;
+    background: var(--mobile-menu-bg-color);
+    z-index: 9;
+    inset: 0 50% 0 0;
+    padding: 20px;
+    overflow-y: auto;
+    transform: translate(-100%);
+    transition: ease 1s;
+
+    &.show {
+      transform: translate(0);
+
+      &~.navbar__overlay {
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+  }
+}
 .navbar-inner {
   margin-left: 129px;
   @include abstracts.breakpoint(xl) {
     margin-left: 4.4rem;
   }
+
   @include abstracts.breakpoint(lg) {
     display: flex;
     flex-direction: column;
-    position: fixed;
     margin-left: 0;
-    background: var(--mobile-menu-bg-color);
-    z-index: 1;
-    inset: 0 50px 0 0;
+    // overflow-y: auto;
+      height: calc(100% - 90px);
+    }
+    
+    
+    &-close-btn {
+      display: none;
+    
+      @include abstracts.breakpoint(lg) {
+        display: inline-block;
+        padding: 10px 0;
+        cursor: pointer;
+      }
   }
 
   .navbar__link {
@@ -71,6 +117,10 @@
     @extend %top-bar-typho;
     @include abstracts.breakpoint(lg) {
       justify-content: space-between;
+      padding: 0;
+        line-height: 1.5;
+        height: auto;
+        padding: 20px 0 13px;
     }
 
     // &:hover ~ .dropdown{
@@ -79,16 +129,21 @@
   }
   .nav-bar__arrow {
     padding-top: 0.3rem;
+    @include abstracts.breakpoint(lg) {
+        transform: rotate(-90deg);
+      }
   }
 
   .navbar__item{
+    &:hover .dropdown {
+        display: block;
+      }
     @include abstracts.breakpoint(lg) {
       width: 100%;
-    }
-    &:hover .dropdown {
-      display: block;
-    }
-
+      // > .navbar__link {
+        //   padding: 20px 0;
+        // }
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                }
   }
 }
 
