--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="top-bar">
-        <div class="top-bar__more">
+        <div class="top-bar__more js-toggle" toggle-target="#navbar">
             <img src="./assets/icons/more.svg" alt="" class="icon top-bar__more-icon" />
         </div>
 
@@ -8,26 +8,29 @@
             <img src="./assets/icons/logo.svg" alt="" class="logo__img" />
             <h2 class="logo__text">grocerymart</h2>
         </a>
-        <nav class="navbar">
+        <nav class="navbar hide" id="navbar">
+            <button class="js-toggle" toggle-target="#navbar">
+                <img src="../assets/icons/navbar-close.svg" alt="" class="navbar-inner-close-btn">
+            </button>
             <ul class="navbar-inner js-dropdown-list">
                 <li class="navbar__item">
                     <a href="#!" class="navbar__link">
                         Departments
                         <img src="./assets/icons/arrow-down.svg" alt="" class="nav-bar__arrow icon" />
                     </a>
-                    <div class="dropdown">
+                    <div class="dropdown js-dropdown">
                         <div class="dropdown__inner">
                             <div class="top-menu">
                                 <div class="top-menu__main">
                                     <div class="menu-column">
-                                        <div class="menu-column__icon">
+                                        <div class="menu-column__icon menu-column__icon--hidden">
                                             <img src="./assets/images/category/cate-1.1.svg" alt=""
                                                 class="menu-column__icon-1">
                                             <img src="./assets/images/category/cate-1.2.svg" alt=""
                                                 class="menu-column__icon-2">
                                         </div>
                                         <div class="menu-column__content">
-                                            <h2 class="menu-column__heading">
+                                            <h2 class="menu-column__heading menu-column__heading--hidden">
                                                 All Departments
                                             </h2>
                                             <ul class="menu-column__list js-menu-list">
@@ -3500,7 +3503,6 @@
                             </div>
                         </div>
                     </div>
-
                 </li>
                 <li class="navbar__item">
                     <a href="#!" class="navbar__link">
@@ -3995,7 +3997,7 @@
                                                 </div>
                                                 <div class="menu-column__content">
                                                     <h2>
-                                                        <a href="#!" class="menu-column__heading">Home &
+                                                        <a href="#!" class="menu-column__heading">
                                                             Featured Brands</a>
                                                     </h2>
                                                     <ul class="menu-column__list">
@@ -4203,6 +4205,7 @@
                 </li>
             </ul>
         </nav>
+        <div class="navbar__overlay js-toggle" toggle-target="#navbar"></div>
         <div class="top-act">
             <div class="top-act__group">
                 <button class="top-act__btn top-act__search">
